adds jquery functionality

--- a/index.html
+++ b/index.html
@@ -9,12 +9,23 @@
 	
 	<body>
 		<h1>Here is the demo!!</h1>
-		<img src="assets/1.png"
-			alt="a deer that is an omen">
+		<img src="assets/4.png"
+			alt="a deer that is an omen"
+			class="specialImage">
 		<img src="assets/2.png"
-			alt="some guys that are ready for a war">
+			alt="some guys that are ready for a war"
+			class="specialImage">
 		<img src="assets/3.png"
 			alt="a guy locked in a tower">
+		<button class="imgAdder">a great button</button>
+		<div class="end">
+		
+		</div>	
+	
+		<script src="http://code.jquery.com/jquery-3.3.1.min.js"
+  				integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  				crossorigin="anonymous"></script>
+  		<script src="script.js"></script>
 	</body>
 
 </html>
